<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.nflfootballscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/team_name_1" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/DisplayTextStyle"
                android:text="@string/default_score" />

            <Button
                style="@style/TopButtonStyle"
                android:onClick="addSixPointsForTeamA"
                android:text="@string/offense_score_1" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOnePointForTeamA"
                android:text="@string/offense_score_2" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoPointsForTeamA"
                android:text="@string/offense_score_3" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreePointsForTeamA"
                android:text="@string/offense_score_4" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/team_name_2" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/DisplayTextStyle"
                android:text="@string/default_score" />

            <Button
                style="@style/TopButtonStyle"
                android:onClick="addSixPointsForTeamB"
                android:text="@string/offense_score_1" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addOnePointForTeamB"
                android:text="@string/offense_score_2" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addTwoPointsForTeamB"
                android:text="@string/offense_score_3" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addThreePointsForTeamB"
                android:text="@string/offense_score_4" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/BottomButtonStyle"
        android:onClick="resetScores"
        android:text="RESET"></Button>
</RelativeLayout>

